--- a/extrato/templates/extrato/transacoes.html
+++ b/extrato/templates/extrato/transacoes.html
@@ -1,3 +1,6 @@
+{% extends "extrato/base.html" %}
+
+{% block content %}
 Todas as transacoes
 
 <table>
@@ -28,3 +31,4 @@ Todas as transacoes
 
 {% endfor %}
 </table>
+{% endblock %}
