--- a/extrato/templates/extrato/homepage.html
+++ b/extrato/templates/extrato/homepage.html
@@ -1,3 +1,6 @@
+{% extends "extrato/base.html" %}
+
+{% block content %}
 Por corretora
 
 <table>
@@ -40,3 +43,4 @@ Por corretora
   {% endfor %}
   {% endfor %}
 </table>
+{% endblock %}
