sort by bond type

--- a/extrato/templates/extrato/base.html
+++ b/extrato/templates/extrato/base.html
@@ -4,11 +4,18 @@
 	<meta charset="utf-8">
 	<style>
 	  td {
-	    text-align: right;
+	  text-align: right;
+	  padding: 2px 8px;
 	  }
 	</style>
   </head>
   <body>
+	<a href="{% url "extrato:index" %}">Extrato</a>
+	&bullet;
+	<a href="{% url "extrato:transacoes" %}">Todas as transacoes</a>
+	&bullet;
+	<a href="/admin/extrato/transacao/add/">Nova transacao</a>
+	<br><br>
 	{% block content %}{% endblock %}
   </body>
 </html>
