show current total

--- a/extrato/templates/extrato/homepage.html
+++ b/extrato/templates/extrato/homepage.html
@@ -25,6 +25,7 @@ Por corretora
 	<th>Qtde.</th>
 	<th>Investido</th>
 	<th>Preço</th>
+	<th>ValorAtual</th>
 	<th>SortInvest.</th>
 	<th>Atualiz.</th>
     </tr>
@@ -42,6 +43,7 @@ Por corretora
 	<td>{{ titulo.quantidade }}</td>
 	<td>{{ titulo.precoTotal }}</td>
 	<td>{{ titulo.preco }}</td>
+	<td>{{ titulo.precoAtual }}</td>
 	<td>{{ titulo.precoInvest }}</td>
 	<td>{{ titulo.precoAtualizado|date:"Y-m-d" }}</td>
   </tr>
