--- a/extrato/templates/extrato/transacoes.html
+++ b/extrato/templates/extrato/transacoes.html
@@ -28,7 +28,7 @@ Todas as transacoes
 	<td>{{ tr.rendimento }}%</td>
 	<td>{{ tr.preco }}</td>
 	<td><a href="/admin/extrato/transacao/{{ tr.id }}/change/">editar</a></td>
-	<td>{{ tr.anotacoes }}</td>
+	<td class="left">{{ tr.anotacoes }}</td>
   </tr>
 
 {% endfor %}
