--- a/extrato/templates/extrato/homepage.html
+++ b/extrato/templates/extrato/homepage.html
@@ -24,8 +24,8 @@ Por corretora
 	<th>Vencimento</th>
 	<th>Qtde.</th>
 	<th>Investido</th>
-	<th>Preço</th>
 	<th>ValorAtual</th>
+	<th>Unitário</th>
 	<th>SortInvest.</th>
 	<th>Atualiz.</th>
     </tr>
@@ -42,8 +42,8 @@ Por corretora
 	<td>{{ titulo.vencimento|date:"Y-m-d" }}</td>
 	<td>{{ titulo.quantidade }}</td>
 	<td>{{ titulo.precoTotal }}</td>
-	<td>{{ titulo.preco }}</td>
 	<td>{{ titulo.precoAtual }}</td>
+	<td>{{ titulo.preco }}</td>
 	<td>{{ titulo.precoInvest }}</td>
 	<td>{{ titulo.precoAtualizado|date:"Y-m-d" }}</td>
   </tr>
